# GOAT-1

./: build.gradle.kts  gradlew  gradlew.bat  local.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/core/: buffer.cpp  read_loop.cpp
app/src/main/cpp/jni/: jni_bridge.cpp  jni_utils.cpp
app/src/main/cpp/pty/: pty.cpp  pty.h  resize.cpp  signal.cpp
app/src/main/java/com/goatx/: MainActivity.kt
app/src/main/java/com/goatx/ansi/: AnsiParser.kt  ControlCodes.kt  CsiHandler.kt  EscapeState.kt  ParserConfig.kt  ParserFactory.kt  SgrHandler.kt
app/src/main/java/com/goatx/concurrency/: EngineDispatcher.kt  UiDispatcher.kt
app/src/main/java/com/goatx/nativebridge/: NativeLoader.kt  NativePty.kt  PtyCallback.kt
app/src/main/java/com/goatx/terminal/: Cell.kt  ClipboardManager.kt  ColorPalette.kt  Cursor.kt  CursorBlinkController.kt  EngineLifecycle.kt  InputMode.kt  KeyMapper.kt  ResizeController.kt  ScrollbackBuffer.kt  SelectionManager.kt  SessionManager.kt  TerminalEngine.kt  TerminalGrid.kt  TerminalInputConnection.kt  TerminalRenderer.kt  TerminalView.kt  Viewport.kt
app/src/main/java/com/goatx/util/: Constants.kt  Logger.kt  MathUtil.kt
app/src/main/res/drawable/: ic_launcher.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
